--- a/source/assets/scss/style.scss
+++ b/source/assets/scss/style.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Barriecito&display=swap');
 
 body {
+    background-color: #333548;
     margin: 0;
     font: 100%/1.4 "Roboto", sans-serif;
 }
@@ -28,72 +29,258 @@ p {
     height: 500px;
     background: linear-gradient(to right, rgba(0, 0, 255, 0.13), #363749), url("../images/background.jpg");
     background-attachment: fixed;
-    background-position: center;
+    background-position: left center;
     background-repeat: no-repeat;
     background-size: cover;
+}
 
-    &__navbar {
-        box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.45);
-        padding: 0 40px;
-        position: absolute;
-        top: 20px;
+.navbar {
+    box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.45);
+    padding: 0 10px;
+    position: sticky;
+    top: 0;
+
+    width: 100%;
+    background-color: $branco;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    &__logo {
         height: 60px;
-        width: 100%;
-        background-color: $branco;
         display: flex;
-        justify-content: space-between;
+        align-items: center;
+        cursor: pointer;
 
-        &__logo {
-            height: 60px;
-            display: flex;
-            align-items: center;
-            cursor: pointer;
+        &__image {
+            height: 100%;
+        }
 
-            &__image {
-                height: 100%;
+        &__title {
+            color: rgb(51, 53, 72);
+            margin-left: 10px;
+            font-family: 'Barriecito', cursive;
+            font-weight: bold;
+            font-size: 1.5em;
+        }
+    }
+
+    &__menu {
+        display: flex;
+        flex-wrap: wrap;
+
+        &__item {
+            align-self: stretch;
+            line-height: 35px;
+            font-weight: bold;
+            transition: all 0.4s linear;
+
+            a {
+                display: block;
+                padding: 0 10px;
+                color: rgb(51, 53, 72);
+                transition: all 0.4s linear;
+
+                &:hover {
+                    color: $fonts;
+                }
             }
 
-            &__title {
-                color: rgb(51, 53, 72);
-                margin-left: 10px;
-                font-family: 'Barriecito', cursive;
-                font-weight: bold;
-                font-size: 1.5em;
+            &:hover {
+                background-color: $primary-shadow;
+            }
+
+            &--active {
+                background-color: $primary-shadow;
+
+                a {
+                    color: $fonts;
+                }
+            }
+        }
+    }
+}
+
+
+.section {
+    margin: 40px;
+    display: grid;
+    grid-template-columns: minmax(250px, auto);
+    grid-gap: 10px 20px;
+
+    &__bandas {
+        display: none;
+        grid-row: span 1;
+        background-color: #fafafa;
+        border-radius: 10px;
+        box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.45);
+
+        &__titulo {
+            padding: 10px 5px 5px 15px;
+            color: #f2b032;
+            font-weight: bold;
+            border-bottom: 2px solid #955133;
+            font-size: 1.3em;
+
+            &__icon {
+                margin-right: 10px;
+                font-size: 1.3em;
             }
         }
 
-        &__menu {
-            height: 60px;
-            display: flex;
+        &__lista {
+            margin: 10px 15px;
 
             &__item {
-                align-self: stretch;
-                line-height: 60px;
-                font-weight: bold;
-                transition: all 0.4s linear;
-
-                a {
-                    display: block;
-                    padding: 0 10px;
-                    color: rgb(51, 53, 72);
-                    transition: all 0.4s linear;
-
-                    &:hover {
-                        color: $fonts;
-                    }
-                }
+                display: block;
+                padding: 5px 0;
+                text-align: center;
+                border-bottom: 1px solid rgba(54, 54, 54, 0.45);
+                color: #b3790b;
+                transition: all 0.4s ease-in-out;
 
                 &:hover {
-                    background-color: $primary-shadow;
+                    color: #fb9f0f;
+
+                    background-color: lighten(rgba(54, 54, 54, 0.45), 50%);
                 }
 
-                &--active {
-                    background-color: $primary-shadow;
+                &:checked {
+                    color: rgb(51, 53, 72);
 
-                    a {
-                        color: $fonts;
+                }
+
+                &:visited {
+                    color: rgb(51, 53, 72);
+
+                }
+            }
+        }
+    }
+
+    &__main {
+        grid-row: span 2;
+        background-color: #fafafa;
+        border-radius: 10px;
+        box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.45);
+
+        &__post {
+            display: flex;
+            flex-direction: column;
+            border-bottom: 2px solid #dddddd;
+            align-items: center;
+            justify-content: stretch;
+
+            &:last-child {
+                border-bottom: none;
+            }
+
+            &__capa {
+                border-radius: 10px;
+                margin: 20px 20px;
+                width: 200px;
+                height: 200px;
+                box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.45);
+            }
+
+            &__cd {
+                color: #333548;
+                width: 200px;
+
+                &__download {
+                    background-color: #7eaf47;
+                    border-radius: 10px;
+                    color: $fonts;
+                    margin: 10px auto;
+                    padding: 8px 15px;
+                    cursor: pointer;
+                    border: 2px solid #7eaf47;
+                    font-weight: bold;
+                    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.45);
+                    outline: none;
+                    transition: all 0.2s ease-in-out;
+                    width: 100%;
+
+                    &:hover {
+                        box-shadow: 1px 1px 17px 0px rgba(0, 0, 0, 0.45);
+                        background-color: darken($color: #7eaf47, $amount: 20%);
+                    }
+
+                    &:focus {
+                        box-shadow: 1px 1px 17px 0px rgb(92, 126, 54);
+                        border: 2px solid darken($color: #7eaf47, $amount: 20%);
+                    }
+
+                    &:active {
+                        transform: translateY(.10em);
+                        box-shadow: 1px 5px 20px 0px rgba(0, 0, 0, 0.45);
                     }
                 }
+            }
+        }
+    }
+}
+
+.footer {
+    background-color: #191919;
+    color: $branco;
+    padding: 8px;
+    text-align: center;
+}
+
+@media screen and (min-width: 31.8em) {
+    .navbar {
+        &__menu {
+            &__item {
+                line-height: 60px;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 42.5em) {
+
+    .header {
+        height: 500px;
+        background-position: bottom;
+    }
+
+    .navbar {
+        padding: 0 40px;
+    }
+
+    .section {
+        &__bandas {
+            display: block;
+        }
+
+        grid-template-columns: 200px minmax(400px, auto);
+
+        &__main {
+            &__post {
+                &__capa {
+                    margin: 50px 50px;
+                    width: 250px;
+                    height: 250px;
+                }
+
+                &__cd {
+                    width: auto;
+
+                    &__download {
+                        width: auto;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 56.25em) {
+    .section {
+        &__main {
+            &__post {
+                flex-direction: row;
             }
         }
     }
