--- a/source/assets/scss/style.scss
+++ b/source/assets/scss/style.scss
@@ -24,6 +24,27 @@ p {
     margin: 0.6em 0;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #fb9f0f;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: darken($color: #fb9f0f, $amount: 20%);
+}
+
 
 .header {
     height: 500px;
@@ -61,7 +82,7 @@ p {
             margin-left: 10px;
             font-family: 'Barriecito', cursive;
             font-weight: bold;
-            font-size: 1.5em;
+            font-size: 1.6em;
         }
     }
 
