--- a/source/assets/scss/style.scss
+++ b/source/assets/scss/style.scss
@@ -136,6 +136,10 @@ p {
         border-radius: 10px;
         box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.45);
 
+        &--moon {
+            background-color: #22232e;
+        }
+
         &__titulo {
             padding: 10px 5px 5px 15px;
             color: #f2b032;
@@ -175,7 +179,21 @@ p {
                     color: rgb(51, 53, 72);
 
                 }
+
+                &--moon {
+                    &:checked {
+                        color: #adadb1;
+
+                    }
+
+                    &:visited {
+                        color: #adadb1;
+
+                    }
+                }
             }
+
+
         }
     }
 
@@ -184,6 +202,10 @@ p {
         background-color: #fafafa;
         border-radius: 10px;
         box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.45);
+
+        &--moon {
+            background-color: #22232e;
+        }
 
         &__post {
             display: flex;
@@ -208,6 +230,10 @@ p {
                 color: #363749;
                 width: 200px;
 
+                &--moon{
+                    color: $branco;
+                }
+
                 &__download {
                     background-color: #7eaf47;
                     border-radius: 10px;
@@ -222,6 +248,9 @@ p {
                     transition: all 0.2s ease-in-out;
                     width: 100%;
 
+                    &--moon{
+                        color: black;
+                    }
                     &:hover {
                         box-shadow: 1px 1px 17px 0px rgba(0, 0, 0, 0.45);
                         background-color: darken($color: #7eaf47, $amount: 20%);
@@ -247,7 +276,22 @@ p {
     color: $branco;
     padding: 8px;
     text-align: center;
+    position: relative;
 }
+
+.template {
+    color: $branco;
+    margin: 15px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 16%;
+    left: 4px;
+    background-color: #191919;
+    border-radius: 50%;
+    padding: 8px;
+    border: 1px solid darken($color: #cccccc, $amount: 20%);
+}
+
 
 @media screen and (min-width: 31.8em) {
     .navbar {
